# Trabajo-Fin-de-Grado

./: Aux_OpenCV.cpp  Aux_OpenCV.hpp  DetectTrack.cpp  LICENSE  OCV_Funcs.cpp  OCV_Funcs.hpp  README.md  RaspiTrack.cpp  Record.cpp  TrackAprox.cpp  libcamera_comp.cpp
Cam_package/: CMakeLists.txt  package.xml
Cam_package/src/: TrackApproxROS.cpp
Cam_package/src/Include/: OCV_Funcs.hpp  PolyfitEigen.hpp  ROSPublish.hpp  spline.h  spline2.h
Cam_package/src/Source/: OCV_Funcs.cpp  spline.cpp
CmakeLists/: CMakeListsDetectTrack.txt  CMakeListsRecord.txt  CMakeListsTrackAprox.txt
OpenCV-test/: OpenCV-test.sln
OpenCV-test/OpenCV-test/: DetectTrack.cpp  OpenCV-test.vcxproj  OpenCV-test.vcxproj.filters
OpenCV-test/OpenCV-test/x64/Debug/: OpenCV-test.exe.recipe  OpenCV-test.ilk  Track-test.exe.recipe  Track-test.ilk
my_package/: CMakeLists.txt  package.xml
my_package/src/: my_node.cpp
vec_package/: CMakeLists.txt  package.xml
vec_sub/: CMakeLists.txt  package.xml
vec_sub/src/: vec_node.cpp
